[tool.poetry]
name = "csp-py"
version = "0.1.0"
description = ""
authors = ["cilanthr0 <cilanthr0@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pytest = "^7.1.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
